<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:textSize="20dp"
        android:text="@string/fact_list_header"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/numberEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:hint="@string/fact_list_enter_number"
        android:inputType="numberSigned"
        android:maxLength="10"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/getFactButton"
        app:layout_constraintTop_toTopOf="@id/getFactButton"
        app:layout_constraintBottom_toBottomOf="@id/getFactButton"/>

    <Spinner
        android:id="@+id/numberTypeSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/getFactRandomButton"
        app:layout_constraintBottom_toBottomOf="@id/getFactRandomButton"
        app:layout_constraintStart_toStartOf="@id/numberEditText" />

    <Button
        android:id="@+id/getFactButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="50dp"
        android:text="@string/fact_list_get_fact"
        app:layout_constraintLeft_toRightOf="@id/numberEditText"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleTextView" />

    <Button
        android:id="@+id/getFactRandomButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fact_list_get_fact_random"
        app:layout_constraintRight_toRightOf="@id/getFactButton"
        app:layout_constraintTop_toBottomOf="@id/getFactButton" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/factsHistoryRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:background="@color/fact_list_history_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/getFactRandomButton"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/factsHistoryEmptyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="15dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/fact_list_empty_history"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintTop_toTopOf="@id/factsHistoryRecyclerView"
        app:layout_constraintBottom_toBottomOf="@id/factsHistoryRecyclerView"
        app:layout_constraintStart_toStartOf="@id/factsHistoryRecyclerView"
        app:layout_constraintEnd_toEndOf="@id/factsHistoryRecyclerView" />

    <FrameLayout
        android:id="@+id/loadingView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000"
        android:visibility="gone"
        tools:visibility="gone"
        android:clickable="true"
        android:focusable="true">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/progressBarStyleLarge"
            android:layout_gravity="center"
            android:visibility="visible" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>